# cpp_dev_container_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  justfile  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  another_app.cpp  template_app.cpp
cmake/: clang-toolchain.cmake  gcc-toolchain.cmake
src/: CMakeLists.txt  hello_world.cpp  hello_world.hpp
tests/: CMakeLists.txt  dummy_test.cpp
